refactor: restructure project to src layout with full test coverage
- Reorganize into src/open_elevation/ package with domain-based modules
  (elevation/service, elevation/routes, elevation/schemas, download/)
- Add custom exception hierarchy (AppError, ElevationNotFoundError, etc.)
  replacing raw HTTPException in business logic
- Add full type hints on all functions, replace deprecated typing imports
  with built-in generics (list, dict, str | None)
- Fix bug: replace id(filepath) with incrementing counter for spatial
  index keys to prevent GC-related collisions
- Fix performance: use rasterio windowed reads instead of loading full
  raster bands for single-pixel lookups
- Fix security: add path traversal protection in zip extraction, add
  HTTP request timeouts in download scripts
- Replace print() with structured stdlib logging throughout
- Centralize configuration in config.py with environment variables
- Add pyproject.toml with ruff, mypy --strict, and pytest config
- Add Makefile with lint/format/typecheck/test targets
- Add 31 pytest tests: unit, functional (TestClient), and integration
  tests with a synthetic GeoTIFF fixture
- Use uv in Dockerfile for fast dependency installation
- Add MIT license
- Remove obsolete test_api.sh

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 .git
-__pycache__
+__pycache__/
 *.pyc
 .env
 .DS_Store
-tif_files
+tif_files/
+.venv/
+dist/
+*.egg-info/
+.mypy_cache/
+.ruff_cache/
+.pytest_cache/
+.claude
